Other DONE + street page modif
Other page DONE
Street page : adding images.

--- a/other.html
+++ b/other.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>KT-Street</title>
+    <title>KT-Other</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
@@ -48,235 +48,152 @@
                 </span>
             </div>
         </nav>
-
         <div class="row p-lg-4"></div>
         <div class="row p-4 justify-content-center">
             <div class="col-12 text-center">
-                <p class="display-4">STREET</p>
+                <p class="display-4">OTHER</p>
             </div>
             <div class="col-12 text-center">
-                <p class="display-6" style="font-size: 2vmax;">All images are captionned by the place they were taken
+                <p class="display-6" style="font-size: 2vmax;">Here you will find everything that I think didn't match
+                    with any style I'm shooting.
                 </p>
             </div>
         </div>
         <div class="row justify-content-center text-center p-5">
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\1_street.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\1.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Place liberté
+                            Osteospermum
                             <br>
-                            <p style="font-size:1vmax;">Manif Electro</p>
+                            <p style="font-size:1vmax;">Mon Jardin</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\2_street.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\2.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Kevin
+                            <br>
+                            <p style="font-size:1vmax;">Verdon</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\other\3.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            "Doggo"
+                            <br>
+                            <p style="font-size:1vmax;">Place Liberté</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\4.jpg" alt="">
+                    <div class="overlay2">
+                        <div class="text_bott_center">
+                            Clara
+                            <br>
+                            <p style="font-size:1vmax;">Verdon (argentique)</p>                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10 p-lg-5 pb-4">
+                <div class="container1">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\5.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
-                            Toulon
+                            "BrewMan"
                             <br>
-                            <p style="font-size:1vmax;">Manif BLM</p>
+                            <p style="font-size:1vmax;">Place Liberté</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\a_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Vers le ciel</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\3_street.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Manif BLM</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\4_street.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\6.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Toulon
+                            "HeineMan"
                             <br>
-                            <p style="font-size:1vmax;">Manif Electro</p>
+                            <p style="font-size:1vmax;">WEI</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\5_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Manif Covid</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\c_street.jpg" alt="">
+                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\other\7.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Toulon
+                            Osteospermum
                             <br>
-                            <p style="font-size:1vmax;">Lafayette</p>
+                            <p style="font-size:1vmax;">Mon Jardin</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\6_street.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Théâtre</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\7_street.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\8.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Anonymous</p>
+                            Kevin
+                            <br>                
+                            <p style="font-size:1vmax;">Verdon</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\8_street.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Place de la Liberté</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\9_street.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\9.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Toulon
+                            Holi powder
                             <br>
-                            <p style="font-size:1vmax;">Strangers</p>
+                            <p style="font-size:1vmax;">WEI</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\10_street.jpg" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\10.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Place Liberté
+                            Osteospermum
                             <br>
-                            <p style="font-size:1vmax;">Manif Electro</p>
+                            <p style="font-size:1vmax;">Mon Jardin</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\11_street.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\other\11.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center">
-                            Toulon
+                            Broken cam
                             <br>
-                            <p style="font-size:1vmax;">Manif BLM</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\b_street.JPG" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center_paysage">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Vers le ciel</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\12_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Manif Electro</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\13_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Mayol</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\14_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Mayol</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-10 p-lg-5 pb-4">
-                <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\15_street.jpg" alt="">
-                    <div class="overlay2">
-                        <div class="text_bott_center">
-                            Toulon
-                            <br>
-                            <p style="font-size:1vmax;">Mayol</p>
+                            <p style="font-size:1vmax;">Toulon</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
 
         <div class="row p-4"></div>
         <div class="row justify-content-center p-2">
@@ -289,7 +206,6 @@
                             class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
-
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
             © 2071 Copyright:
