--- a/nimes.html
+++ b/nimes.html
@@ -27,7 +27,7 @@
                             <a class="nav-link zoom-in" href="index.html">MENU</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link zoom-in" href="#">BLOG</a>
+                            <a class="nav-link zoom-in" href="blog.html">BLOG</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
