--- a/photographie.html
+++ b/photographie.html
@@ -94,9 +94,11 @@
             <div class="col-lg-4 col-md-12 p-4 m-2rem">
                 <div class="container1">
                     <img class="img-fluid image1" src="IMG/portfolio/other.jpg" alt="">
-                    <div class="overlay1">
-                        <div class="text1">OTHER...</div>
-                    </div>
+                    <a href="other.html">
+                        <div class="overlay1">
+                            <div class="text1">OTHER...</div>
+                        </div>
+                    </a>
                 </div>
             </div>
 
