remove facebook + new anim + todo list
update de la todo list
remove du logo facebook (inutile)
add du logo shopping -> page DON

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- TODO LIST :
-    -page street + other
+<!-- TODO LIST :    
     -alimenter le blog...
     -selecteur de langue (voir tuto)
     -animation menu déroulant téléphone (bug)
@@ -8,9 +7,9 @@
     -size du texte dans portfolio quand écran >2500px sur les formats paysages(bug)
     -playlist musique commune
     -slider de naviguation pour les pages photos.
+    -page ABOUT US + page DON
 -->
 <html>
-
 <head>
     <title>K&C - Adventures</title>
     <meta charset="utf-8">
@@ -52,10 +51,9 @@
                     <a href="https://www.instagram.com/k.c_travels/"><span
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i
-                                class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    
                     <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
-                                class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                                class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
             </div>
         </nav>
@@ -139,7 +137,7 @@
                 <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
-                <div class="clickon ">
+                <div class="clickon">
                     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="rounded-circle"
                             src="IMG/wankul/clara.jpg" alt="Generic placeholder image" width="140" height="140"></a>
                 </div>
@@ -157,10 +155,9 @@
             <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                <a href="#"><span class="badge rounded-pill  text-dark zoom-in"><i
-                            class="fab fa-facebook mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                
                 <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
-                            class="fab fa-linkedin  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                            class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
         <!-- Copyright -->
