change copyright date + base page about

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p>
                     Agé de 18 ans et passionné de paysages et de photographie, j'ai tout quitté pour me consacrer à mes
                     passions !
-                    Retrouver l'intégralité de mes photos dans la rubrique <a href="">About Kevin</a>
+                    Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html">PHOTOGRAPHIE</a>
                 </p>
                 <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
@@ -145,7 +145,7 @@
                 <p>
                     Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
                     Ma passion pour le dessin rend la nature encore plus attrayante !
-                    Bientôt la rubrique <a href="">Dessins</a>
+                    Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT</a>
                 </p>
                 <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
@@ -162,7 +162,7 @@
         </div>
         <!-- Copyright -->
         <div class="text-center text-black text-decoration-none p-3">
-            © 2071 Copyright:
+            © 2021 Copyright:
             <a href="index.html" style="color: black;">PROJET CANADA!</a>
         </div>
     </div>
