icon (all pages) + fix on street
-fix street : some images were JPG instead of jpg -> DONE
-add icon on all pages

--- a/street.html
+++ b/street.html
@@ -11,6 +11,7 @@
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="IMG\logo1.png" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -217,7 +218,7 @@
             </div>
             <div class="col-10 p-lg-5 pb-4">
                 <div class="container1">
-                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\b_street.JPG" alt="">
+                    <img class="img-fluid img_thumb" src="IMG\portfolio\street\b_street.jpg" alt="">
                     <div class="overlay2">
                         <div class="text_bott_center_paysage">
                             Toulon
