--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
         <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
         <link href="fontawesome/css/all.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/png" href="IMG\logo1.png" />
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
         </style>
@@ -56,7 +57,7 @@
             <div class="row p-lg-4"></div>
             <div class="row p-2">
                 <div class="col-md-12 col-lg-6 p-4">
-                    <p class="h2 text-center">Argentique 05/11/2021</p>
+                    <p class="h2 text-center">Argentique 2021</p>
                     <a href="argentique.html">
                         <img class="rounded img-fluid h-100" src="IMG\carousel\argentique\argentique1.jpg" alt="image">                       
                     </a>
