--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link rel="icon" type="image/png" href="IMG\logo1.png" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
