--- a/argentique.html
+++ b/argentique.html
@@ -10,6 +10,7 @@
         <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
         <link href="fontawesome/css/all.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" type="image/png" href="IMG\logo1.png" />
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
         </style>
