--- a/about.html
+++ b/about.html
@@ -1,66 +1,99 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>K&C</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <!-- JavaScript de Bootstrap -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
-        <link href="fontawesome/css/all.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="icon" type="image/png" href="IMG\logo1.png" />
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
-        </style>
-    </head>
-    <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
-        <div class="container text-decoration-none text-dark">
-            <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
-                <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="index.html">MENU</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link zoom-in" href="blog.html">BLOG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                        </li>
-                    </ul>
-                    <span class="navbar-text" style="font-size:20px;">
-                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>                    
-                        <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    </span>
-                </div>
-            </nav>
-            <div class="row p-4"></div>
-            <div class="row p-4 justify-content-center">
-                <div class="col-12 text-center">
-                    <p class="display-4">Our Playlist</p>                  
-                </div>
+
+<head>
+    <title>K&C</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <!-- JavaScript de Bootstrap -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+    <link href="fontawesome/css/all.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
+    </style>
+</head>
+
+<body class="text-light d-flex h-100 fade-in" style="background-color: #5f7698 ; font-family: 'Jura', sans-serif;">
+    <div class="container text-decoration-none">
+        <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
+            <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png"
+                    alt="Generic placeholder image" width="50" height="50"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link zoom-in" style="color: white;" href="index.html">MENU</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in" style="color: white;" href="blog.html">BLOG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in" style="color: white;" href="photographie.html">PHOTOGRAPHIE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                    </li>
+                </ul>
+                <span class="navbar-text" style="font-size:20px;">
+                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
+                                class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill zoom-in"><i
+                                class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </span>
             </div>
-            <div class="row justify-content-center p-2">
-                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
-                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                </div>
+        </nav>
+        <div class="row p-4"></div>
+        <div class="row p-4 justify-content-center">
+            <div class="col-12 text-center p-4">
+                <div class="display-4">Our songs</div>
             </div>
-            <!-- Copyright -->
-            <div class="text-center text-black text-decoration-none p-3">
-                © 2021 Copyright:
-                <a href="index.html" style="color: black;">PROJET CANADA!</a>
-            </div> 
+            <div class="col-6 text-center p-4">
+                <p class="display-5 p-2">Kevin</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/4P0Srk1WYGpJMy4Z0bpLJm?utm_source=generator"
+                    width="90%" height="380" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                </iframe>
+            </div>
+            <div class="col-6 text-center p-4">
+                <p class="display-5 p-2">Clara</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
+                    width="90%" height="380" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                </iframe>
+            </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
+        <div class="row justify-content-center p-2 text-light">
+            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
+                            class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                <a href="#"><span class="badge rounded-pill zoom-in"><i
+                            class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+            </div>
+        </div>
+        <!-- Copyright -->
+        <div class="text-center text-decoration-none p-3">
+            © 2021 Copyright:
+            <a href="index.html" style="color:white;">PROJET CANADA!</a>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
