--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
+                    </li><li class="nav-item">
+                        <a class="nav-link zoom-in" href="about.html">ABOUT
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
@@ -46,6 +48,7 @@
                     <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
+                
             </div>
         </nav>
         <div class="row p-3 "></div>
@@ -54,7 +57,7 @@
                 <h5>Notre blog voyage</h5>
             </div>
         </div>
-        <div class="row m-1 justify-content-center text-center">
+        <div class="row m-1 justify-content-center  text-center">
             <div class="col-sm-2">
             </div>
             <div class="col-md-8 col-sm-8 text-black text-center puff-in-center">                
@@ -136,7 +139,7 @@
                 <p>
                     Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
                     Ma passion pour le dessin rend la nature encore plus attrayante !
-                    Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT</a>
+                    Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT
                 </p>
                 <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
