--- a/other.html
+++ b/other.html
@@ -35,6 +35,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
+                    </li><li class="nav-item">
+                        <a class="nav-link zoom-in" href="about.html">ABOUT
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
