--- a/about.html
+++ b/about.html
@@ -51,11 +51,42 @@
         </nav>
         <div class="row p-4"></div>
         <div class="row p-4 justify-content-center">
-            <div class="col-12 text-center p-4">
-                <div class="display-4">Our songs</div>
+            <div class="row p-5 justify-content-center">
+            <div class="col-sm-12 text-center text-light">
+                <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
             </div>
-            <div class="col-6 text-center p-4">
-                <p class="display-5 p-2">Kevin</p>
+            <div class="col-sm-12 text-center text-light">
+                <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
+            </div>
+        </div>
+        <div class="row p-3 text-light justify-content-center text-center">
+            <div class="col-lg-6">
+                <div class="clickon">
+                    <a href="about.html"><img class="rounded-circle "
+                            src="IMG/wankul/kevin.jpg" alt="Generic placeholder image" width="140" height="140"></a>
+                </div>
+                <h2>Kevin</h2>
+                <p>
+                    Agé de 18 ans et passionné de paysages et de photographie, j'ai tout quitté pour me consacrer à mes
+                    passions !
+                    Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html">PHOTOGRAPHIE</a>
+                </p>
+                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+            </div><!-- /.col-lg-6 -->
+            <div class="col-lg-6">
+                <div class="clickon">
+                    <a href="about.html"><img class="rounded-circle"
+                            src="IMG/wankul/clara.jpg" alt="Generic placeholder image" width="140" height="140"></a>
+                </div>
+                <h2>Clara</h2>
+                <p>
+                    Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
+                    Ma passion pour le dessin rend la nature encore plus attrayante !
+                    Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT</a>
+                </p>
+                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+            </div><!-- /.col-lg-6 -->
+            <div class="col-6 text-center p-4">                
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/playlist/4P0Srk1WYGpJMy4Z0bpLJm?utm_source=generator"
                     width="90%" height="380" frameBorder="0" allowfullscreen=""
@@ -63,7 +94,6 @@
                 </iframe>
             </div>
             <div class="col-6 text-center p-4">
-                <p class="display-5 p-2">Clara</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
                     width="90%" height="380" frameBorder="0" allowfullscreen=""
