--- a/about.html
+++ b/about.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <!-- JavaScript de Bootstrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <script src="JS/about.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -52,78 +54,82 @@
         <div class="row p-4"></div>
         <div class="row p-4 justify-content-center">
             <div class="row p-5 justify-content-center">
-            <div class="col-sm-12 text-center text-light">
-                <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
-            </div>
-            <div class="col-sm-12 text-center text-light">
-                <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
-            </div>
-        </div>
-        <div class="row p-3 text-light justify-content-center text-center">
-            <div class="col-lg-6">
-                <div class="clickon">
-                    <a href="about.html"><img class="rounded-circle "
-                            src="IMG/wankul/kevin.jpg" alt="Generic placeholder image" width="140" height="140"></a>
+                <div class="col-sm-12 text-center text-light">
+                    <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
                 </div>
-                <h2>Kevin</h2>
-                <p>
-                    Agé de 18 ans et passionné de paysages et de photographie, j'ai tout quitté pour me consacrer à mes
-                    passions !
-                    Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html">PHOTOGRAPHIE</a>
-                </p>
-                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
-            </div><!-- /.col-lg-6 -->
-            <div class="col-lg-6">
-                <div class="clickon">
-                    <a href="about.html"><img class="rounded-circle"
-                            src="IMG/wankul/clara.jpg" alt="Generic placeholder image" width="140" height="140"></a>
+                <div class="col-sm-12 text-center text-light">
+                    <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
                 </div>
-                <h2>Clara</h2>
-                <p>
-                    Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
-                    Ma passion pour le dessin rend la nature encore plus attrayante !
-                    Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT</a>
-                </p>
-                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
-            </div><!-- /.col-lg-6 -->
-            <div class="col-6 text-center p-4">                
-                <iframe style="border-radius:12px"
-                    src="https://open.spotify.com/embed/playlist/4P0Srk1WYGpJMy4Z0bpLJm?utm_source=generator"
-                    width="90%" height="380" frameBorder="0" allowfullscreen=""
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-                </iframe>
             </div>
-            <div class="col-6 text-center p-4">
-                <iframe style="border-radius:12px"
-                    src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
-                    width="90%" height="380" frameBorder="0" allowfullscreen=""
-                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-                </iframe>
+            <div class="row p-4"></div>
+            <div class="row p-3 text-light justify-content-center text-center">
+                <div class="col-lg-6">
+                    <div class="clickon">
+                        <a href="about.html"><img class="rounded-circle " src="IMG/wankul/kevin.jpg"
+                                alt="Generic placeholder image" width="140" height="140"></a>
+                    </div>
+                    <h2>Kevin</h2>
+                    <p>
+                        Agé de 18 ans et passionné de paysages et de photographie, j'ai tout quitté pour me consacrer à
+                        mes
+                        passions !
+                        Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html"
+                            class="text-light">PHOTOGRAPHIE</a>
+                    </p>
+                    <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                </div><!-- /.col-lg-6 -->
+                <div class="col-lg-6">
+                    <div class="clickon">
+                        <a href="about.html"><img class="rounded-circle" src="IMG/wankul/clara.jpg"
+                                alt="Generic placeholder image" width="140" height="140"></a>
+                    </div>
+                    <h2>Clara</h2>
+                    <p>
+                        Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
+                        Ma passion pour le dessin rend la nature encore plus attrayante !
+                    </p>
+                    <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                </div><!-- /.col-lg-6 -->
             </div>
-        </div>
-        <div class="row justify-content-center p-2 text-light">
-            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
-                <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
-                            class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                <a href="#"><span class="badge rounded-pill zoom-in"><i
-                            class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+            <div class="row p-4"></div>
+            <div class="row text-light justify-content-center text-center hideme">
+                <div class="col">
+                    <div class="display-5">Scrolle pour en decouvrir plus !</div>
+                </div>
             </div>
-        </div>
-        <!-- Copyright -->
-        <div class="text-center text-decoration-none p-3">
-            © 2021 Copyright:
-            <a href="index.html" style="color:white;">PROJET CANADA!</a>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
 
+
+            <div class="row p-3 text-light justify-content-center text-center">
+                <div class="col-sm-12 p-5 pt-2 text-center text-light ">
+                    <p class="display-5">Notre passion pour la musique </p>
+                </div>
+                <div class="col text-center p-4">
+                    <iframe style="border-radius:12px"
+                        src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
+                        width="90%" height="380" frameBorder="0" allowfullscreen=""
+                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                    </iframe>
+                </div>
+            </div>
+            <div class="row justify-content-center p-2 text-light">
+                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
+                                class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    <a href="#"><span class="badge rounded-pill zoom-in"><i
+                                class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </div>
+            </div>
+            <!-- Copyright -->
+            <div class="text-center text-decoration-none p-3">
+                © 2021 Copyright:
+                <a href="index.html" style="color:white;">PROJET CANADA!</a>
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+</body>
 </html>
