Lot of changes, commentary later

--- a/street.html
+++ b/street.html
@@ -7,18 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <!-- JavaScript de Bootstrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <script src="JS/scroll_down.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
 </head>
 
 <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
-    <div class="container text-decoration-none text-dark">
+    <div class="container-fluid text-decoration-none text-dark">
         <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
             <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png"
                     alt="Generic placeholder image" width="50" height="50"></a>
@@ -36,7 +38,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                    </li><li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link zoom-in" href="about.html">ABOUT
                     </li>
                 </ul>
@@ -44,7 +47,7 @@
                     <a href="https://www.instagram.com/k.c_travels/"><span
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    
+
                     <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
@@ -62,7 +65,7 @@
             </div>
         </div>
         <div class="row justify-content-center text-center p-5">
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\1_street.jpg" alt="">
                     <div class="overlay2">
@@ -74,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\2_street.JPG" alt="">
                     <div class="overlay2">
@@ -86,7 +89,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\a_street.jpg" alt="">
                     <div class="overlay2">
@@ -98,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\3_street.JPG" alt="">
                     <div class="overlay2">
@@ -110,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\4_street.jpg" alt="">
                     <div class="overlay2">
@@ -122,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\5_street.jpg" alt="">
                     <div class="overlay2">
@@ -134,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\c_street.jpg" alt="">
                     <div class="overlay2">
@@ -146,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\6_street.JPG" alt="">
                     <div class="overlay2">
@@ -158,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb h-75" src="IMG\portfolio\street\7_street.jpg" alt="">
                     <div class="overlay2">
@@ -170,7 +173,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\8_street.JPG" alt="">
                     <div class="overlay2">
@@ -182,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\9_street.JPG" alt="">
                     <div class="overlay2">
@@ -194,7 +197,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\10_street.jpg" alt="">
                     <div class="overlay2">
@@ -206,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\11_street.JPG" alt="">
                     <div class="overlay2">
@@ -218,7 +221,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\b_street.jpg" alt="">
                     <div class="overlay2">
@@ -230,7 +233,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\12_street.jpg" alt="">
                     <div class="overlay2">
@@ -242,7 +245,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\13_street.jpg" alt="">
                     <div class="overlay2">
@@ -254,7 +257,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\14_street.jpg" alt="">
                     <div class="overlay2">
@@ -266,7 +269,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-10 p-lg-5 pb-4">
+            <div class="col-10 p-lg-5 pb-4 ">
                 <div class="container1">
                     <img class="img-fluid img_thumb" src="IMG\portfolio\street\15_street.jpg" alt="">
                     <div class="overlay2">
@@ -284,7 +287,7 @@
             <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                
+
                 <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
@@ -296,9 +299,7 @@
             <a href="index.html" style="color: black;">PROJET CANADA!</a>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
