--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>K&C</title>
+    <title>K&C-About</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
@@ -13,14 +13,14 @@
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
-    <script src="JS/about.js"></script>
+    <script src="JS/scroll_down.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
 </head>
 
 <body class="text-light d-flex h-100 fade-in" style="background-color: #5f7698 ; font-family: 'Jura', sans-serif;">
-    <div class="container text-decoration-none">
+    <div class="container-fluid text-decoration-none">
         <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
             <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png"
                     alt="Generic placeholder image" width="50" height="50"></a>
@@ -61,7 +61,7 @@
                     <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
                 </div>
             </div>
-            <div class="row p-4"></div>
+            <div class="row  p-4"></div>
             <div class="row p-3 text-light justify-content-center text-center">
                 <div class="col-lg-6">
                     <div class="clickon">
@@ -91,19 +91,12 @@
                     <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
             </div>
-            <div class="row p-4"></div>
-            <div class="row text-light justify-content-center text-center hideme">
-                <div class="col">
-                    <div class="display-5">Scrolle pour en decouvrir plus !</div>
-                </div>
-            </div>
-
-
-            <div class="row p-3 text-light justify-content-center text-center">
+            <div class="row  p-4"></div>
+            <div class="row hideme p-3 text-light justify-content-center text-center ">
                 <div class="col-sm-12 p-5 pt-2 text-center text-light ">
-                    <p class="display-5">Notre passion pour la musique </p>
+                    <p class="display-5 ">Notre passion pour la musique </p>
                 </div>
-                <div class="col text-center p-4">
+                <div class="col text-center p-4 ">
                     <iframe style="border-radius:12px"
                         src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
                         width="90%" height="380" frameBorder="0" allowfullscreen=""
@@ -111,7 +104,7 @@
                     </iframe>
                 </div>
             </div>
-            <div class="row justify-content-center p-2 text-light">
+            <div class="row hideme justify-content-center p-2 text-light">
                 <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                     <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
                                 class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
