--- a/nimes.html
+++ b/nimes.html
@@ -1,63 +1,75 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>K&C-Nîmes</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <!-- JavaScript de Bootstrap -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
-        <link href="fontawesome/css/all.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="icon" type="image/png" href="IMG\logo1.png" />
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
-        </style>
-    </head>
-    <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
-        <div class="container text-decoration-none text-dark">
-            <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
-                <a class="navbar-brand" href="#"><img class="rounded-circle" src="IMG/logo1.png" alt="Generic placeholder image" width="50" height="50"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link zoom-in" href="index.html">MENU</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link zoom-in" href="blog.html">BLOG</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                        </li>
-                    </ul>
-                    <span class="navbar-text" style="font-size:20px;">
-                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                        
-                        <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    </span>
-                </div>
-            </nav>
-            <div class="row p-4">
-                <div class="col">
-                    <p class="display-1">PAGE EN COURS DE CREATION</p>
-                </div>
+
+<head>
+    <title>K&C-Nîmes</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <!-- JavaScript de Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
+    <link href="fontawesome/css/all.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <script src="JS/scroll_down.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
+    </style>
+</head>
+
+<body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
+    <div class="container-fluid text-decoration-none text-dark">
+        <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
+            <a class="navbar-brand" href="#"><img class="rounded-circle" src="IMG/logo1.png"
+                    alt="Generic placeholder image" width="50" height="50"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link zoom-in" href="index.html">MENU</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in" href="blog.html">BLOG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
+                    </li>
+                </ul>
+                <span class="navbar-text" style="font-size:20px;">
+                    <a href="https://www.instagram.com/k.c_travels/"><span
+                            class="badge rounded-pill text-dark zoom-in"><i
+                                class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+
+                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                                class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                </span>
             </div>
-            <div class="row justify-content-center p-2">
-                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
-                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                </div>
+        </nav>
+        <div class="row p-4">
+            <div class="col">
+                <p class="display-1">PAGE EN COURS DE CREATION</p>
             </div>
-            <!-- Copyright -->
-            <div class="text-center text-black text-decoration-none p-3">
-                © 2021 Copyright:
-                <a href="index.html" style="color: black;">PROJET CANADA!</a>
-            </div>            
         </div>
-    </body>
+        <div class="row justify-content-center p-2">
+            <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
+                            class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+
+                <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                            class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+            </div>
+        </div>
+        <!-- Copyright -->
+        <div class="text-center text-black text-decoration-none p-3">
+            © 2021 Copyright:
+            <a href="index.html" style="color: black;">PROJET CANADA!</a>
+        </div>
+    </div>
+</body>
+
 </html>
