--- a/photographie.html
+++ b/photographie.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="bootstrap-5.1.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <!-- JavaScript de Bootstrap -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
+    <script src="JS/scroll_down.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -19,7 +21,7 @@
 
 <body class="text-light d-flex h-100 fade-in" style="background-color: #f5f6fa ; font-family: 'Jura', sans-serif;">
 
-    <div class="container text-decoration-none text-dark">
+    <div class="container-fluid text-decoration-none text-dark">
 
         <nav class="navbar navbar-expand-lg navbar-light" id="nav1">
             <a class="navbar-brand" href="index.html"><img class="rounded-circle" src="IMG/logo1.png"
@@ -121,9 +123,6 @@
 
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
