about added on all navbar pages

--- a/base_NO_EDIT.html
+++ b/base_NO_EDIT.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                    </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
                     <a href="https://www.instagram.com/k.c_travels/"><span
