--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
+                    </li><li class="nav-item">
+                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
