--- a/photographie.html
+++ b/photographie.html
@@ -41,6 +41,8 @@
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                     </li><li class="nav-item">
+                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                    </li><li class="nav-item">
                         <a class="nav-link zoom-in" href="about.html">ABOUT
                     </li>
                 </ul>
