bug fix "about"

--- a/base_NO_EDIT.html
+++ b/base_NO_EDIT.html
@@ -13,7 +13,7 @@
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="IMG\logo1.png" />
-    <script src="JS/about.js"></script>
+    <script src="JS/scroll_down.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300&display=swap');
     </style>
@@ -40,7 +40,7 @@
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                        <a class="nav-link zoom-in " href="about.html">ABOUT</a>
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
@@ -52,8 +52,8 @@
                 </span>
             </div>
         </nav>
-        <div class="row  p-4"></div>
-        <div class="row  p-4">
+        <div class="row p-4"></div>
+        <div class="row p-4">
             <div class="col">
                 <p class="display-1">PAGE EN COURS DE CREATION</p>
             </div>
@@ -80,5 +80,4 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
