--- a/blog.html
+++ b/blog.html
@@ -41,8 +41,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                    </li><li class="nav-item">
-                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link zoom-in " href="about.html">ABOUT</a>
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
