--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                         <a class="nav-link zoom-in" style="color: white;" href="photographie.html">PHOTOGRAPHIE</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT</a>
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
