--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                    </li><li class="nav-item">
-                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link zoom-in" href="about.html">ABOUT
+                        <a class="nav-link zoom-in" href="about.html">ABOUT</a>
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
