--- a/portrait.html
+++ b/portrait.html
@@ -39,7 +39,7 @@
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
                     </li><li class="nav-item">
-                        <a class="nav-link zoom-in " style="color: white;" href="about.html">ABOUT
+                        <a class="nav-link zoom-in " href="about.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="about.html">ABOUT
