too much going on HELP

--- a/base_NO_EDIT.html
+++ b/base_NO_EDIT.html
@@ -47,7 +47,7 @@
                     <a href="https://www.instagram.com/k.c_travels/"><span
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                    <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
             </div>
@@ -63,7 +63,7 @@
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
@@ -80,4 +80,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
