--- a/about.html
+++ b/about.html
@@ -46,19 +46,19 @@
                 <span class="navbar-text" style="font-size:20px;">
                     <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
                                 class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    <a href="#"><span class="badge rounded-pill zoom-in"><i
+                    <a href="#donate"><span class="badge rounded-pill zoom-in"><i
                                 class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
             </div>
         </nav>
-        <div class="row p-4"></div>
+        <div class="row p-2"></div>
         <div class="row p-4 justify-content-center">
             <div class="row p-5 justify-content-center">
                 <div class="col-sm-12 text-center text-light">
-                    <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
+                    <p class="display-4 typewriter d-none d-sm-block text-decoration-underline">A propos de Nous</p>
                 </div>
                 <div class="col-sm-12 text-center text-light">
-                    <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
+                    <h3 class="typewriter d-block d-sm-none text-decoration-underline">A propos de Nous</h3>
                 </div>
             </div>
             <div class="row  p-4"></div>
@@ -76,7 +76,7 @@
                         Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html"
                             class="text-light">PHOTOGRAPHIE</a>
                     </p>
-                    <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                    <p><a class="btn btn-dark zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
                 <div class="col-lg-6">
                     <div class="clickon">
@@ -88,7 +88,7 @@
                         Passionnée par la Nature et la biodiversité, je suis partie à l'aventure !
                         Ma passion pour le dessin rend la nature encore plus attrayante !
                     </p>
-                    <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                    <p><a class="btn btn-dark zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
             </div>
             <div class="row p-4 hideme text-light justify-content-center text-center">
@@ -107,47 +107,124 @@
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-unstyled">
-                        <li class="display-4 pb-3 fw-bold text-decoration-underline">Roadmap</li>
+                        <li class="display-4 p-3 fw-bold text-decoration-underline">Roadmap</li>
                         <li class="h5 p-1">TOULON->LISBONNE</li>
                         <li class="h5 p-1">-1812 KMs</li>
                         <li class="h5 p-1">-19H de route</li>
-                        <li class="h5 p-1">et max de fun !</li>                        
+                        <li class="h5 p-1">et max de fun !</li>
                     </ul>
                 </div>
             </div>
-            <div class="row p-2"></div>
-            <div class="row hideme p-4 text-light justify-content-center text-center ">
-                <div class="col-sm-12 p-5 text-center text-light ">
-                    <p class="display-5 ">Notre passion pour la musique </p>
-                </div>
-                <div class="col text-center p-4 ">
-                    <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
-                        width="90%" height="380" frameBorder="0" allowfullscreen=""
-                        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-                    </iframe>
+            <div class="row p-4"></div>
+            <div class="row p-4 hideme text-light justify-content-center text-center">
+                <div class="col-10">
+                    <div class="display-4">Mais ce n'est que le début d'une longue Aventure</div>
                 </div>
             </div>
-            <div class="row hideme justify-content-center p-2 text-light">
-                <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
-                    <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
-                                class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                    <a href="#"><span class="badge rounded-pill zoom-in"><i
-                                class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+
+            <div class="row p-4"></div>
+            <div class="row p-4 m-4" style="padding-top: 0;">
+                <div class="col-8">
+                    <div id="carouselExampleControls" class="carousel" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <a href="calanques.html">
+                                    <img class="d-block w-100" src="IMG\carousel\calanques\calanque.jpg"
+                                        alt="Calanques">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="argentique.html">
+                                    <img class="d-block w-100" src="IMG/carousel/argentique/argentique1.jpg"
+                                        alt="photographie">
+                                </a>
+                            </div>
+                            <div class="carousel-item">
+                                <a href="nimes.html">
+                                    <img class="d-block w-100" src="IMG/carousel/nimes/parc_pano_1.jpg" alt="concert">
+                                </a>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col align-self-center">
+                    <div class="display-5 text-center">Des Blogs et Vlogs !</div>
+                    <p class="text-center">Consulter nos blogs et futur vlogs sur la page "BLOG"</p>
                 </div>
             </div>
-            <!-- Copyright -->
-            <div class="text-center text-decoration-none p-3">
-                © 2021 Copyright:
-                <a href="index.html" style="color:white;">PROJET CANADA!</a>
+
+            <div class="row p-4 hideme text-light justify-content-center text-center " id="donate">
+                <div class="col-10">
+                    <div class="display-4"></div>
+                </div>
             </div>
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+
+            <div class="jumbotron text-center">
+                <hr class="my-4">
+                <h1 class="display-4">Vous pouvez dès maintenant nous soutenir !</h1>
+                <p class="lead">Apporter votre soutien financier en cliquant sur le lien ci-dessous :)</p>
+                <p>Merci pour vôtre visite et bonne lecture !
+                </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg"
+                        href="https://www.paypal.com/donate/?hosted_button_id=95JFT8ZQEYU6C" role="button"><i
+                            class="fa-brands fa-paypal p-3"></i>FAIRE UN DON<i
+                            class="fa-solid fa-van-shuttle p-3"></i></a>
+                </p>
+                <hr class="my-4">
+            </div>
+            <div class="row p-4"></div>
+            <div class="row p-4"></div>
+            <div class="row p-4 hideme text-light justify-content-center text-center">
+                <div class="col-10">
+                    <div class="display-4">Découvrez également notre passion pour la musique >_< !</div>
+                    </div>
+                </div>
+
+                <div class="row p-2"></div>
+                <div class="row hideme p-4 text-light justify-content-center text-center ">
+                    <div class="col-sm-12 p-5 text-center text-light ">
+                        <p class="display-5 ">Notre passion pour la musique </p>
+                    </div>
+                    <div class="col text-center p-4 ">
+                        <iframe style="border-radius:12px"
+                            src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
+                            width="90%" height="380" frameBorder="0" allowfullscreen=""
+                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+                        </iframe>
+                    </div>
+                </div>
+                <div class="row hideme justify-content-center p-2 text-light">
+                    <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
+                        <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill zoom-in"><i
+                                    class="fab fa-instagram text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                        <a href="#"><span class="badge rounded-pill zoom-in"><i
+                                    class="fas fa-shopping-basket text-light mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
+                    </div>
+                </div>
+                <!-- Copyright -->
+                <div class="text-center text-decoration-none p-3">
+                    © 2021 Copyright:
+                    <a href="index.html" style="color:white;">PROJET CANADA!</a>
+                </div>
+            </div>
+
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
