--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
                     <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                    <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
             </div>
@@ -91,7 +91,7 @@
             <div class="col-lg-2 col-md-6 col-sm-10  col-6 rounded-pill text-center">
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
-                <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
