--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                    <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
 
@@ -113,10 +113,10 @@
 
         <div class="row p-5 justify-content-center">
             <div class="col-sm-12 text-center text-black">
-                <p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p>
+                <a href="about.html" style="text-decoration:none; color:black;"><p class="display-4 typewriter d-none d-sm-block">A propos de Nous</p></a>
             </div>
             <div class="col-sm-12 text-center text-black">
-                <h3 class="typewriter d-block d-sm-none">A propos de Nous</h3>
+                <a href="about.html" style="text-decoration:none; color:black;"><h3 class="typewriter d-block d-sm-none">A propos de Nous</h3></a>
             </div>
         </div>
         <div class="row p-3 text-black justify-content-center text-center">
@@ -131,7 +131,7 @@
                     passions !
                     Retrouver l'intégralité de mes photos dans la rubrique <a href="photographie.html">PHOTOGRAPHIE</a>
                 </p>
-                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                <p><a class="btn btn-dark zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
                 <div class="clickon">
@@ -144,7 +144,7 @@
                     Ma passion pour le dessin rend la nature encore plus attrayante !
                     Retrouver plus de détails dans la rubrique <a href="about.html">ABOUT
                 </p>
-                <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
+                <p><a class="btn btn-dark zoom-in" href="#" role="button">Contacter »</a></p>
             </div><!-- /.col-lg-6 -->
         </div>
 
@@ -153,7 +153,7 @@
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
