--- a/landscape.html
+++ b/landscape.html
@@ -48,7 +48,7 @@
                             class="badge rounded-pill text-dark zoom-in"><i
                                 class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                    <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                    <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                                 class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
                 </span>
             </div>
@@ -205,7 +205,7 @@
                 <a href="https://www.instagram.com/k.c_travels/"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fab fa-instagram  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
 
-                <a href="#"><span class="badge rounded-pill text-dark zoom-in"><i
+                <a href="about.html#donate"><span class="badge rounded-pill text-dark zoom-in"><i
                             class="fas fa-shopping-basket  mx-2 mx-sm-2 mx-md-0 mx-lg-0 fa-2x"></i></span></a>
             </div>
         </div>
